[package]
name = "tantivy-sstable"
version = "0.14.0-dev"
authors = ["Paul Masurel <paul.masurel@gmail.com>"]
edition = "2018"

[dependencies]
slice-deque="0.3"
byteorder = "1.3"
stable_deref_trait = "1.2"

[[bench]]
name = "merge_benchmark"
harness = false

[profile.bench]
opt-level = 3
debug = false
overflow-checks = false
lto = true
rpath = false
debug-assertions = false
codegen-units = 16
incremental = false

[dev-dependencies]
criterion = "0.2"
rand = "0.6"